hphp/test/zend/good/Zend/tests/add_003.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot perform mathematical operation on stdClass and HH\vec' in %s/add_003.php:8
Stack trace:
%A
